--- a/index.html
+++ b/index.html
@@ -54,4 +54,7 @@
             <li>Electronics</li>
             <li>Customer Service</li>
         </ul>
+     <footer>
+            <p><a href="./contact.html">Ronnie Edmondson Jr</a></p>
+        </footer>
 </body>
