--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
         </ul>
 <hr />
         <footer>
-            <p><a href="./contact.html">Ronnie Edmondson Jr</a></p>
+            <a href="./contact.html">Ronnie Edmondson Jr</a>
         </footer>
 </body>
